RESOLVED FIXED133388
Fix iOS depth buffer clearing issue.
https://bugs.webkit.org/show_bug.cgi?id=133388
Summary Fix iOS depth buffer clearing issue.
Alex Christensen
Reported 2014-05-29 14:24:43 PDT
On iOS, the depth buffer is not being cleared correctly in WebGLRenderingContext::clearIfComposited because it is always returning after the check for !m_context->layerComposited(). This moves where the layer is being marked as composited from the mac-specific GraphicsContext3D::prepareTexture to the mac and iOS specific display function, which calls drawInCGLContext through its [super display] call.
Attachments
Patch (1.98 KB, patch)
2014-05-29 14:27 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2014-05-29 14:27:24 PDT
WebKit Commit Bot
Comment 2 2014-05-29 15:10:48 PDT
Comment on attachment 232263 [details] Patch Clearing flags on attachment: 232263 Committed r169467: <http://trac.webkit.org/changeset/169467>
WebKit Commit Bot
Comment 3 2014-05-29 15:10:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.