[iOS WebGL] Fix depth buffer clearing issue. https://bugs.webkit.org/show_bug.cgi?id=133388

Patch by Alex Christensen <achristensen@webkit.org> on 2014-05-29
Reviewed by Dean Jackson.

No new tests, but this fixes webgl/1.0.1/conformance/canvas/buffer-preserve-test.html.

* platform/graphics/mac/WebGLLayer.mm:
(-[WebGLLayer display]):
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::prepareTexture):
Moved marking the layer as composited from the mac-only prepareTexture to
the end of [WebGLLayer display] which is called by mac and iOS.

Canonical link: https://commits.webkit.org/151415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169467 268f45cc-cd09-0410-ab3c-d52691b4dbfc